--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 .intro {
   font-weight: bold;
   color: #234567;
+  padding: 10px;
 }
 .best {
-  width: 100%;
+  width: auto;
+  height: 350px;
 }
