--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 .intro {
   font-weight: bold;
-  color: #234567;
-  padding: 10px;
 }
 .best {
   width: auto;
@@ -13,10 +11,19 @@
 }
 h1 {
   font-size: 38px;
+  text-align: center;
 }
 h2 {
   font-size: 28px;
 }
 .callout {
   color: cyan;
+}
+
+.hobbies {
+
+}
+
+.coding {
+
 }
