add additional styling to about me profile img.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
   width: auto;
   height: 350px;
 }
+.profile-img {
+  width: auto;
+  height: 350px;
+  border-radius: 50%;
+  border: solid black 5px;
+}
 
 .mission-statement {
   font-weight: bold;
