--- a/css/blog.css
+++ b/css/blog.css
@@ -3,16 +3,20 @@
   font-family: "Arial";
   background-color: #234567;
   text-align: center;
+  margin: 2px;
 }
 
 .beginning {
   text-align: center;
+  margin: 4px 0 2px;
 }
 
 .middle {
   text-align: center;
+  margin: 1px 0 3px;
 }
 
 .end {
   text-align: center;
+  margin: 2px 0 1px;
 }
